serd (0.29.3) unstable;

  * Make serdi syntax options case-insensitive
  * Add basic error tolerant parsing for line-based formats
  * Support strict parsing of prefixed names
  * Report errors for all failing test cases
  * Use more efficient stack allocation and growth policies
  * Add NTriples test suite
  * Fix building with MSVC

 -- David Robillard <d@drobilla.net>  Sun, 24 Sep 2017 16:34:20 +0200

serd (0.28.0) stable;

  * Add support for reading from a user provided callback
  * Add serd_node_from_substring()
  * Fix strict parsing of abolute URI schemes
  * Fix parsing of hex escapes in file URIs (thanks Johannes Mueller)
  * Gracefully handle applications that write corrupt UTF-8
  * Fix hangs when reading corrupt UTF-8

 -- David Robillard <d@drobilla.net>  Fri, 21 Jul 2017 08:28:47 +0200

serd (0.26.0) stable;

  * Add support for TriG and NQuads
  * Add support for braindead SPARQL PREFIX and BASE directives

 -- David Robillard <d@drobilla.net>  Mon, 09 Jan 2017 20:10:35 -0500

serd (0.24.0) stable;

  * Add serd_node_new_relative_uri()
  * Fix construction and comparison of URIs with UTF-8 characters
  * Report I/O errors with message and return appropriate status code
  * Report missing statement separator errors
  * Fix potential out of bounds read
  * Fix unaligned memory access, undefined behaviour which breaks on ARM
  * Fix documentation generation
  * Update serdi man page

 -- David Robillard <d@drobilla.net>  Mon, 19 Sep 2016 22:21:47 -0400

serd (0.22.0) stable;

  * Remove dependence on fmax() to avoid portability issues
  * Fix serd_reader_read_file() for URIs with escaped characters (spaces)
  * Add serd_reader_set_strict() and -l (lax) option to serdi to tolerate
    parsing URIs with escaped characters
  * Fix reading statements ending with a blank then dot with no space
  * Fix clash resolution when a blank node ID prefix is set
  * Fix serializing fractional decimals that would round up